Remove upstream logs and binaries and update .gitignore to prevent adding them again.
I accidently included all the logs and binaries because VS UI automatically uploaded them when I instructed it to create the repo. I assumed it would create an empty repo that I could choose to add files at will afterwards.

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,11 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# PS3 Compiler Logs
+*_verilog.txt
+*.tlog
+
+# Ignore PS3 binaries
+*.sprx
+*.a
