Remove more logs/binaries that I missed from first push, and update .gitignore to ignore these changes.

--- a/.gitignore
+++ b/.gitignore
@@ -364,8 +364,10 @@ FodyWeavers.xsd
 
 # PS3 Compiler Logs
 *_verilog.txt
+*..FileListAbsolute.txt
 *.tlog
 
 # Ignore PS3 binaries
 *.sprx
 *.a
+*.o
